<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.appendous.suntisttask.activity.PhoneBookActivity"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">

    <include layout="@layout/app_toolbar" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_name"
        android:layout_marginTop="20dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.appendous.suntisttask.util.EditTextFuturaMdBt
            android:id="@+id/userNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:textSize="12sp"
            android:singleLine="true"
            android:inputType="textCapCharacters"

            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_tel"
        app:layout_constraintTop_toBottomOf="@+id/til_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.appendous.suntisttask.util.EditTextFuturaMdBt
            android:id="@+id/userPhoET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_tel"
            android:textSize="12sp"
            android:layout_gravity="center_horizontal"
            android:singleLine="true"
            android:inputType="phone"
            android:maxLength="10" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:id="@+id/rl_sex"
        android:layout_marginTop="20dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_tel"
        >
        <com.appendous.suntisttask.util.ButtonFuturaMdBt
            android:id="@+id/btn_male"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/male"
            android:textSize="12sp"
            android:textColor="@color/colorPlaceHolder"
            android:textAllCaps="false"
            android:background="@drawable/button_sex_selector"
            android:layout_alignParentLeft="true"/>
        <com.appendous.suntisttask.util.ButtonFuturaMdBt
            android:id="@+id/btn_female"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/female"
            android:textSize="12sp"
            android:textColor="@color/colorPlaceHolder"
            android:textAllCaps="false"
            android:background="@drawable/button_sex_selector"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <com.appendous.suntisttask.util.ButtonFuturaMdBt
        android:id="@+id/btn_submit"
        android:layout_marginTop="20dp"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/submit"
        android:textSize="12sp"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"
        android:enabled="false"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_sex"/>

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_marginTop="20dp"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:background="@drawable/shape_round_rec_up"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_submit">

        <com.appendous.suntisttask.util.TextViewFuturaMdBt
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="12sp"
            android:textColor="@color/colorBlack"
            android:textAllCaps="false"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"/>
        <com.appendous.suntisttask.util.TextViewFuturaMdBt
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telephone"
            android:textSize="12sp"
            android:textColor="@color/colorBlack"
            android:textAllCaps="false"
            android:layout_centerInParent="true"/>
        <com.appendous.suntisttask.util.TextViewFuturaMdBt
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textSize="12sp"
            android:textColor="@color/colorBlack"
            android:textAllCaps="false"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="5dp"/>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_phonebook"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:background="@drawable/shape_round_rec_down"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_header">

    </android.support.v7.widget.RecyclerView>
    
</android.support.constraint.ConstraintLayout>
